manifests/platform/services/ops/pve-lb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-pve-backend
spec:
  ports:
    - name: https
      port: 8006
      protocol: TCP
  type: ClusterIP
  selector: {}
